# LINE-MOD-Pipeline

./: .gitignore  CMakeLists.txt  OPENCV_DETECTOR_README.md  arucoBenchmark.cpp  detector.cpp  linemod_opencv_source_code_comprehension.md  linemod_settings.yml  opencv_detector.cpp  opencv_detector.py  templateGeneration.cpp
cmake/: FindGLM.cmake  Findfreenect2.cmake
include/: Aruco.h  Benchmark.h  CameraViewPoints.h  HighLevelLinemod.h  HighLevelLinemodIcp.h  Kinect2.h  ModelBuffer.h  ModelImporter.h  OpenglRender.h  PoseDetection.h  TemplateGenerator.h  defines.h  utility.h
src/: Aruco.cpp  Benchmark.cpp  CameraViewPoints.cpp  HighLevelLinemod.cpp  HighLevelLinemodIcp.cpp  Kinect2.cpp  ModelBuffer.cpp  ModelImporter.cpp  OpenglRender.cpp  PoseDetection.cpp  TemplateGenerator.cpp  defines.cpp  utility.cpp
